<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/productsListFragment">
    <fragment
        android:id="@+id/productsListFragment"
        android:name="com.saiful.roomdatabaseproject.fragment.ProductsListFragment"
        android:label="@string/product_list"
        tools:layout="@layout/fragment_products_list" >
        <action
            android:id="@+id/action_productsListFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.saiful.roomdatabaseproject.fragment.AddProductFragment"
        android:label="@string/add_product"
        tools:layout="@layout/fragment_add_product" >
        <action
            android:id="@+id/action_addProductFragment_to_productsListFragment"
            app:destination="@id/productsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoryListFragment"
        android:name="com.saiful.roomdatabaseproject.fragment.CategoryListFragment"
        android:label="@string/category_list"
        tools:layout="@layout/fragment_category_list" >
        <action
            android:id="@+id/action_categoryListFragment_to_addCategoryFragment"
            app:destination="@id/addCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/addCategoryFragment"
        android:name="com.saiful.roomdatabaseproject.fragment.AddCategoryFragment"
        android:label="@string/add_category"
        tools:layout="@layout/fragment_add_category" >
        <action
            android:id="@+id/action_addCategoryFragment_to_categoryListFragment"
            app:destination="@id/categoryListFragment" />
    </fragment>
</navigation>